--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -2,4 +2,14 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  
+  if error
+    div#error= error
+  else
+    div#unitswrap
+    if data.length == 0
+      span No units found
+    else
+      -for (var i = 0; i < data.length; ++i) {
+        a(href=baseurl + data[i])= data[i]
+      - }
