Added grouping by application on index page

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -5,9 +5,13 @@ body {
 
 a { color: #00B7FF; }
 
-#unitswrap a { display:block;font-size:16px;color:#213A71;width:350px; }
-#unitswrap a span { float:right; text-decoration:none; font-weight:bold;}
-#unitswrap a:hover { color:#617AB1; }
+#timingswrap a { display:block;font-size:16px;color:#213A71;width:350px; }
+#timingswrap a span { float:right; text-decoration:none; font-weight:bold;}
+#timingswrap a:hover { color:#617AB1; }
+#timingswrap h2 { cursor:pointer; }
+
+.unitswrap { }
+.units { }
 
 .timing-header,.timing { overflow:hidden; }
 .timing-header { font-weight:bold; }
